# web-status-checks

./: .gitignore  README.md  pyproject.toml
examples/: sample-urls.txt
src/webstatus/: __init__.py  __main__.py  checker.py  cli.py
