[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "webstatus"
version = "0.2.0"
description = "Check site availability and gather connectivity, SSL, and metadata info"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Pravin L" }]
keywords = ["http", "site-checker", "uptime", "ssl", "monitoring"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "aiohttp>=3.8",
]

[project.scripts]
webstatus = "webstatus.__main__:main"

[project.urls]
Homepage = "https://github.com/"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
